# SmithEngine

./: .gitignore  CMakeLists.txt
include/core/: Engine.h  Node.h  ResourceManager.h  Scene.h  Scene3D.h  SceneManager.h  Transform.h
include/input/: InputManager.h
include/nodes/: MeshNode.h  Node2D.h  Node3D.h
src/: main.cpp
src/core/: Engine.cpp  Node.cpp  SceneManager.cpp
src/input/: InputManager.cpp
src/nodes/: Node3D.cpp
